<resources>
    <string name="app_name">RickAndMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Page Name-->
    <string name="page_characters">"Characters"</string>
    <string name="page_favorites">Favorite</string>
    <string name="page_detail">Character Detail</string>
    <string name="page_settings">Settings</string>
    <string name="page_sign_in">Sign In</string>
    <string name="page_sign_up">Sign Up</string>

    <!-- Menu Name-->
    <string name="menu_character">Character</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sıgn_out">Sign Out</string>

    <!-- Detail Name-->
    <string name="status">Status</string>
    <string name="status_format">Status: %s</string>

    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="created">Created</string>
    <string name="episode">Episode</string>

    <!-- No Fav Character Msg-->
    <string name="no_character_msg">You Haven\'t Added Favorite Characters Yet!</string>

    <!-- Delete Character Msg-->
    <string name="delete_character_msg">Deleted</string>

    <!-- Snack Bar Msg-->
    <string name="character_saved">Character Saved</string>
    <string name="my_fav_character">My Favorite Characters</string>

    <!-- Error Msg-->
    <string name="error_msg">Check Your Internet Connection !</string>

    <!-- Sign In Page -->
    <string name="sign_in_tv">Sign In</string>
    <string name="user_email_tv">Enter e-mail</string>
    <string name="user_password_tv">Enter Password</string>
    <string name="register_now">Register Now</string>
    <string name="sign_in_btn">Sign In</string>

    <!-- Sign up Page -->
    <string name="sign_up_tv">Sign Up</string>
    <string name="sign_up_user_email_tv">Enter e-mail</string>
    <string name="sign_up_user_password_tv">Enter Password</string>
    <string name="sign_up_btn">Sign Up</string>


</resources>